// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prismic --help it should write usage instructions to stdout 1`] = `
"
Synopsis

  $ prismic <command> <domain> <options> 

Examples

  $ prismic init                          Create a project from an existing     
                                          prismic repository.                   
  $ prismic new                           Create a project with a new prismic   
                                          repository.                           
  $ prismic init foobar                   Create a project for the foobar       
                                          repository.                           
  $ prismic init foobar --folder          Create a NodeJS project, non-         
  ~/Desktop/myProject --template NodeJS   interactive.                          
  --noconfirm                                                                   
  $ prismic theme                         Create a project from a zip file with 
  https://github.com/prismicio/nodejs-    a new prismic repository.             
  sdk                                                                           
  $ prismic sm --setup                    Setup a nuxt.js project with          
                                          SliceMachine.                         

Command List

  quickstart          Create a project: initialize a node.js quickstart project 
                      with a new prismic repository.                            
  init                Initialize a project: initialize the code from a template 
                      for an existing prismic repository.                       
  new                 Create a project: initialize the code for a new prismic   
                      repository.                                               
  theme               Create a project: initialize project from a theme with a  
                      new prismic repository.                                   
  login               Login to an existing prismic.io account.                  
  logout              Logout from an existing prismic.io account.               
  signup              Create a new prismic.io account.                          
  list                List the available code templates.                        
  slicemachine | sm   Run slicemachine                                          

Options

  --email        The email of the account to use.                               
  --password     The password of the account to use.                            
  --new                                                                         
  --users                                                                       
  --folder       The folder to create the new project.                          
  --template     Project template to use (see the list command for available    
                 templates).                                                    
  --theme-url                                                                   
  --conf         Specify path to prismic configuration file. Used with \`theme\`  
                 command.                                                       
  --version                                                                     

"
`;

exports[`prismic base should set the base address for prismic 1`] = `
"Successfully changed base https://wroom.io !
"
`;

exports[`prismic init should initialise a project from a template 1`] = `
"Let's get to it!
Initialize local project
Running npm install...
Your project is ready, to proceed:

Go to the project folder : cd /Users/marc/Projects/prismic/prismic-cli/__tmp__/init-test
To have hot reload: npm install -g nodemon
Start your project: nodemon app.js
Point your browser to: http://localhost:3000
"
`;

exports[`prismic login [ --email | --password | --oauthaccesstoken ] should log a user in 1`] = `
"Successfully logged in! You can now create repositories.
"
`;

exports[`prismic logout should log the user out 1`] = `
"Successfully logged out !
"
`;

exports[`prismic new should initialise a project from a template 1`] = `
"CAREFUL, your current base is: https://wroom.io

Let's get to it!
Initialize local project
Running npm install...
Your project is ready, to proceed:

Go to the project folder : cd /Users/marc/Projects/prismic/prismic-cli/__tmp__/test-new
To have hot reload: npm install -g nodemon
Start your project: nodemon app.js
Point your browser to: http://localhost:3000
"
`;

exports[`prismic quickstart [--folder | --template | --new] should initialize a project and repository 1`] = `
"CAREFUL, your current base is: https://wroom.io

Let's get to it!
Initialize local project
Running npm install...
Your project is ready, to proceed:

Go to the project folder : cd /Users/marc/Projects/prismic/prismic-cli/__tmp__/quickstart
To have hot reload: npm install -g nodemon
Start your project: nodemon app.js
Point your browser to: http://localhost:3000
"
`;

exports[`prismic sm --bootstrap should setup an existing project for slicemachine 1`] = `
"~/Projects/prismic/prismic-cli/__tmp__/init-test ~/Projects/prismic/prismic-cli
"
`;

exports[`prismic sm --bootstrap should setup an existing project for slicemachine 2`] = `""`;

exports[`prismic sm --create-slice [ --local-library | --slice-name ] should create a new loccal slice 1`] = `
"~/Projects/prismic/prismic-cli/__tmp__/theme-nuxt ~/Projects/prismic/prismic-cli
[info] Nuxt telemetry is disabled Because running in test environment
[info] You can enable telemetry with \`npx nuxt telemetry enable .\`

✅ nuxt slice created at /Users/marc/Projects/prismic/prismic-cli/__tmp__/theme-nuxt/slices!
Use it right away 👉 https://cli-sm-setup-test-marcmcintosh.wroom.io/documents
"
`;

exports[`prismic sm --create-slice [ --local-library | --slice-name ] should create a new loccal slice 2`] = `""`;

exports[`prismic sm --ls should list slices 1`] = `
"~/Projects/prismic/prismic-cli/__tmp__/theme-nuxt ~/Projects/prismic/prismic-cli
[info] Found 10 slices across 2 libraries:

🥒 at vue-essential-slices:
  * AlternateGrid
  * CallToAction
  * CardsCarousel
  * CustomerLogos
  * FaqSection
  * FeatureTestimonials
  * ImagesSlider
  * PricingTable
  * TestimonialsSlider
  * VideoHighlights

[info] Something's missing?
Check paths in your configuration file!

"
`;

exports[`prismic sm --ls should list slices 2`] = `""`;

exports[`prismic theme [ --theme-url | --folder | --conf | --template ] should reate a rpoject using a theme 1`] = `
"We are checking the theme integrity
CAREFUL, your current base is: https://wroom.io

Let's get to it!
Initialize local project
Running npm install...
Your project is ready, to proceed:

Go to the project folder : cd /Users/marc/Projects/prismic/prismic-cli/__tmp__/theme-nuxt
"
`;
